<resources>
    <string name="app_name">Smart Food Exchange</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="welcome_to">Welcome to</string>
    <string name="smart_food_exchange">Smart Food\nExchange</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_data">User Data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_info">User Info</string>
    <string name="hight_cm">Hight/cm</string>
    <string name="weight_kg">Weight/kg</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="fill_your_data">fill your data</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_now">Login now</string>
    <string name="todo">TODO</string>
    <string name="recipes">Recipes</string>
    <string name="meal_plan">Meal plan</string>
    <string name="nutrition_n_info">Nutrition\nInfo</string>
    <string name="rice">Rice</string>
    <string name="searc_food_here">Search food here</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="food_name">Food Name</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fod_exchange">Food Exchange</string>
    <string name="category">Category</string>
    <string name="breakfast">Breakfast</string>
    <string name="_00_00">00:00</string>
    <string name="set">SET</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="recipe">Search Recipe here</string>
    <string name="calculate">Calculate</string>
    <string name="please_add_recipe_name">Please add recipe name</string>
    <string name="add">Add</string>
    <string name="next">Next</string>

</resources>