<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    android:orientation="vertical"
    tools:context=".views.fragments.authFragments.RegisterUserInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:layout_gravity="center"
        android:textSize="@dimen/_24ssp"
        android:layout_marginTop="@dimen/_60sdp"
        android:textAllCaps="true"
        />

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="@dimen/_8sdp"
        android:hint="@string/hight_cm"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textColor="@color/green_500"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />
    <EditText
        android:id="@+id/edWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="@dimen/_8sdp"
        android:hint="@string/weight_kg"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textColor="@color/green_500"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="@dimen/_8sdp"
        android:hint="@string/age"
        android:paddingStart="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textColor="@color/green_500"
        tools:ignore="RtlSymmetry"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:background="@drawable/edit_text_bg"
        >
        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/green_500"
            android:paddingStart="@dimen/_12sdp"
            android:paddingTop="@dimen/_4sdp"
            />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtGender"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/green_500"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/aestetico_medium"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:paddingStart="@dimen/_4sdp"
                tools:ignore="RtlSymmetry" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/green_500"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/aestetico_medium"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:paddingStart="@dimen/_4sdp"

                tools:ignore="RtlSymmetry" />
        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        >
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btnBack"
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next_icon"
                android:rotation="180"
                />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btnRegister"
            style="@style/StyleRippleCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_button"
                android:paddingVertical="@dimen/_6sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:gravity="center"
                android:fontFamily="@font/aestetico_medium"
                android:textColor="@color/green_500"
                android:textSize="@dimen/_12ssp" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>


</LinearLayout>