<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".views.fragments.mainFragments.HomeFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatActionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        android:layout_marginStart="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/floatActionRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/floatActionBtn"
  >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_recipe" />

        </RelativeLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aestetico_medium"
            android:text="@string/recipes"
            android:textSize="@dimen/_10ssp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/floatActionMealPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_60sdp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/floatActionBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/icons_die_plan" />

        </RelativeLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aestetico_medium"
            android:text="@string/meal_plan"
            android:textSize="@dimen/_10ssp"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/floatActionNutritionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/_16sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/floatActionBtn"
     >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_nutrition_plan" />

        </RelativeLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/aestetico_medium"
            android:text="@string/nutrition_n_info"
            android:textSize="@dimen/_9ssp"
            />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>